--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/mignrod/cse-341-projects/issues"
   },
-  "homepage": "https://github.com/mignrod/cse-341-projects#readme"
+  "homepage": "https://github.com/mignrod/cse-341-projects#readme",
+  "dependencies": {
+    "dotenv": "^17.0.1",
+    "express": "^5.1.0",
+    "mongodb": "^6.17.0"
+  }
 }
